--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "@codesweetly/react-youtube-playlist": "^2.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-text-gradients": "^1.0.2",
