--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-text-gradients": "^1.0.2",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.10.8",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
